Correcciones en el visual

--- a/views/users/coordinators.ejs
+++ b/views/users/coordinators.ejs
@@ -83,7 +83,7 @@
                             <td>
                                 <div>
                                     <a href="/users/<%= coordinator.id %>/edit" class="btn btn-primary btn-manage btn-sm"><i class="fas fa-edit"></i></a>
-                                    <a href="/users/<%= coordinator.id %>/delete" class="btn btn-danger btn-sm"><i class="fa-regular fa-trash-can fa-bounce"></i></a>
+                                    <a href="/users/<%= coordinator.id %>/delete" class="btn btn-danger btn-sm"><i class="fa-regular fa-trash-can"></i></a>
                                 </div>
                             </td>
                         </tr>
