--- a/views/users/editProfile.ejs
+++ b/views/users/editProfile.ejs
@@ -8,35 +8,102 @@
     <title>Edit User Profile</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <!-- Font Awesome Icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
+    <style>
+        .profile-header h2 {
+            font-family: Georgia, serif;
+            color: #fff;
+            text-transform: uppercase;
+            font-weight: bold;
+            letter-spacing: 3px;
+            margin-top: 20px;
+            padding: 15px 20px;
+            text-align: center;
+            background-color: #002e6b;
+            border-radius: 10px;
+        }
+        .details h4 {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            color: #4a4a4a;
+            text-transform: uppercase;
+            font-weight: bold;
+            letter-spacing: 1px;
+            margin-top: 20px;
+            padding: 10px 20px;
+            border-bottom: 7px solid #c9d4ea;
+        }
+        
+        .form-group {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            padding: 5px;
+        }
+        .table th{
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            color: #4a4a4a;
+            text-transform: uppercase;
+            font-weight: bold;
+            letter-spacing: 1px;
+            width: 22%;
+            vertical-align: middle;
+            border-radius: 5px;
+            border: 3px solid #ffffff;
+            letter-spacing: 0.7px;
+        }
+        .table td {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            color: #4a4a4a;
+            letter-spacing: 0.6px;
+            vertical-align: middle;
+            border-radius: 5px;
+            border: 3px solid #ffffff;
+
+
+        }
+        .table tbody tr:nth-of-type(odd) {
+            background-color: #f9f9f9;
+        }
+        .table tbody tr:nth-of-type(even) {
+            background-color: #f9f9f9;
+        }
+        .table tbody tr:hover {
+            background-color: #e9ecef;
+        }
+
+    </style>
 </head>
 <body>
     <div class="container mt-5">
-        <h2 class="mb-0" style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: #4a4a4a; text-transform: uppercase; font-weight: bold; letter-spacing: 1px;">Edit User Profile</h2>
+        <div class="profile-header">
+            <h2>Edit User Profile</h2>
+        </div>
         <form method="post" action="/users/<%= user.id %>/profile?_method=PUT">
         <div class="row">
             <!-- Columna izquierda -->
             
             <div class="col-md-6">
-                
-                <br>
+                <div class="profile-header details">
+                    <h4>Details</h4>
+                </div>
                 <table class="table table-borderless mt-4">
                     <tr>
-                        <th style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: #4a4a4a; text-transform: uppercase; font-weight: bold; letter-spacing: 1px;">Username:</th>
+                        <th>Username:</th>
                         <td>
                             <input type="text" class="form-control" id="username" name="username" value="<%= user.username %>">
                         </td>
                     </tr>
                     
                     <tr>
-                        <th style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: #4a4a4a; text-transform: uppercase; font-weight: bold; letter-spacing: 1px;">Role:</th>
+                        <th>Role:</th>
                         <td><%= userRole %></td>
                     </tr>
                     <tr>
-                        <th style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: #4a4a4a; text-transform: uppercase; font-weight: bold; letter-spacing: 1px;">Email:</th>
+                        <th>Email:</th>
                         <td><%= user.email %></td>
                     </tr>
                     <tr>
-                        <th style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: #4a4a4a; text-transform: uppercase; font-weight: bold; letter-spacing: 1px;">Password:</th>
+                        <th>Password:</th>
                         <td>
                             <div class="row">
                                 <div class="col-md-12"> <!-- Dos tercios del ancho -->
@@ -56,12 +123,17 @@
                 </tr>
                 <% if (userRole === 'Interpreter') { %>
                     <tr>
-                        <th style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: #4a4a4a; text-transform: uppercase; font-weight: bold; letter-spacing: 1px;">Reputation:</th>
+                        <th>Reputation:</th>
                         <td><%= user.email %></td>
                     </tr>
                 <% } %>
 
                 </table>
+                <!-- Botones -->
+                <div class="form-group" style="text-align: center;">
+                    <button type="submit" class="btn btn-primary">Save Changes</button>
+                    <a href="javascript:history.go(-1)" class="btn btn-outline-dark">Cancel</a>
+                </div>
                 <br>
             </div>
 
@@ -72,11 +144,6 @@
                 
         </div>
 
-        <!-- Botones -->
-        <div class="mt-3">
-            <button type="submit" class="btn btn-primary">Save Changes</button>
-            <a href="javascript:history.go(-1)" class="btn btn-outline-dark">Cancel</a>
-        </div>
     </div>
 
     </form>
