--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -139,8 +139,8 @@
                             
                             <td>
                                 <div class="btn-group">
-                                    <a href="/users/<%= user.id %>/edit" class="btn btn-primary btn-manage"><i class="fas fa-edit"></i></a>
-                                    <a href="/users/<%= user.id %>/delete" class="btn btn-danger"><i class="fa-regular fa-trash-can"></i></a>
+                                    <a href="/users/<%= user.id %>/edit" class="btn btn-primary btn-manage btn-sm"><i class="fas fa-edit"></i></a>
+                                    <a href="/users/<%= user.id %>/delete" class="btn btn-danger btn-sm"><i class="fa-regular fa-trash-can"></i></a>
                                 </div>
                             </td>
                         </tr>
