--- a/views/rooms/booths/delete.ejs
+++ b/views/rooms/booths/delete.ejs
@@ -82,8 +82,8 @@
         </div>
 
         <div class="form-group">
-            <label for="language_a">Language to:</label>
-            <input type="language_a" class="form-control" id="language_a" name="language_a" value="<%= booth.language_a %>" readonly>
+            <label for="language_to_translate">Language to:</label>
+            <input type="language_to_translate" class="form-control" id="language_to_translate" name="language_to_translate" value="<%= booth.language_to_translate %>" readonly>
         </div>
 
 
