--- a/views/rooms/booths/selectInterpreter.ejs
+++ b/views/rooms/booths/selectInterpreter.ejs
@@ -118,7 +118,7 @@
 
 <div class="profile-header">
     <h3 class="card-title text-center">ROOM <%= room.id %>: <%= room.name %></h3>
-    <h4 class="card-title text-center">BOOTH <%= booth.id %>: <%= booth.language %> to <%= booth.language_a %></h4>
+    <h4 class="card-title text-center">BOOTH <%= booth.id %>: <%= booth.language %> to <%= booth.language_to_translate %></h4>
 </div>
 
 
