--- a/views/rooms/index.ejs
+++ b/views/rooms/index.ejs
@@ -258,7 +258,7 @@
                                 <tr>
                                     <td>Booth <%= booth.id %></td>
                                     <td><%= booth.language %></td>
-                                    <td><%= booth.language_a %></td>
+                                    <td><%= booth.language_to_translate %></td>
                                     <td style="width: 30%;">
                                         <% 
                                             const interpreters = booth.interpreters.map(interpreter => interpreter.User.username);
