--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -65,7 +65,6 @@
                 <label for="role">Role:</label>
                 <select id="role" name="role" class="form-control" required>
                     <option value="" disabled selected>Select Role</option>
-                    <option value="client">Client</option>
                     <option value="consultant">Consultant</option>
                     <option value="coordinator">Coordinator</option>
                     <option value="operator">Operator</option>
@@ -78,7 +77,7 @@
 
             <div class="form-group" style="text-align: center;">
                 <button type="submit" class="btn btn-success">Create User</button>
-                <a href="javascript:history.go(-1)" class="btn btn-outline-dark">Cancel</a>
+                <a href="/users" class="btn btn-outline-dark">Cancel</a>
             </div>
 
         </form>
