--- a/views/users/delete.ejs
+++ b/views/users/delete.ejs
@@ -72,7 +72,7 @@
         <br>
         
         <div class="form-group" style="text-align: center;">
-            <p>Are you sure you want to delete this booth?</p>
+            <p>Are you sure you want to delete this user?</p>
             <button type="submit" class="btn btn-danger">Confirm deletion</button>
             <a href="javascript:history.go(-1)" class="btn btn-outline-dark">Cancel</a>
         </div>
