--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -104,9 +104,9 @@
                             <td><a href="/users/<%= user.id %>" style="color: blue;"><%= user.id %></a></td>
                             <td><a href="/users/<%= user.id %>/profile" style="color: blue;"><%= user.username %></a></td>
                             <td><%= user.email %></td>
-                            <!-- <td><%= user.passwordUpdate.toLocaleDateString() %> <%= user.passwordUpdate.toLocaleTimeString() %></td>  -->
-                            <!-- <td><%= user.verifyKeyEmail %></td> -->
-                            <!-- <td><%= user.verifyKeyExpire.toLocaleDateString() %> <%= user.verifyKeyExpire.toLocaleTimeString() %></td> -->
+                            <!-- <td><%= user.password_update.toLocaleDateString() %> <%= user.password_update.toLocaleTimeString() %></td>  -->
+                            <!-- <td><%= user.verify_key_email %></td> -->
+                            <!-- <td><%= user.verify_key_expire.toLocaleDateString() %> <%= user.verify_key_expire.toLocaleTimeString() %></td> -->
                             <td><%= user.enabled %></td>
                             <!-- <td><%= user.extra %></td> -->
                             <td>
