--- a/views/users/show.ejs
+++ b/views/users/show.ejs
@@ -119,15 +119,15 @@
             </tr>
             <tr>
                 <th>Password Update</th>
-                <td><%= user.passwordUpdate %></td>
+                <td><%= user.password_update %></td>
             </tr>
             <tr>
                 <th>Verify Key Email</th>
-                <td><%= user.verifyKeyEmail %></td>
+                <td><%= user.verify_key_email %></td>
             </tr>
             <tr>
                 <th>Verify Key Expire</th>
-                <td><%= user.verifyKeyExpire %></td>
+                <td><%= user.verify_key_expire %></td>
             </tr>
             <tr>
                 <th>Enabled</th>
