--- a/views/users/edit.ejs
+++ b/views/users/edit.ejs
@@ -79,16 +79,16 @@
                 <input type="text" class="form-control" id="salt" name="salt" value="<%= user.salt %>">
             </div>
             <div class="form-group">
-                <label for="passwordUpdate">Password Update:</label>
-                <input type="text" class="form-control" id="passwordUpdate" name="passwordUpdate" value="<%= user.passwordUpdate %>" readonly>
+                <label for="password_update">Password Update:</label>
+                <input type="text" class="form-control" id="password_update" name="password_update" value="<%= user.password_update %>" readonly>
             </div>
             <div class="form-group">
-                <label for="verifyKeyEmail">Verify Key Email:</label>
-                <input type="text" class="form-control" id="verifyKeyEmail" name="verifyKeyEmail" value="<%= user.verifyKeyEmail %>">
+                <label for="verify_key_email">Verify Key Email:</label>
+                <input type="text" class="form-control" id="verify_key_email" name="verify_key_email" value="<%= user.verify_key_email %>">
             </div>
             <div class="form-group">
-                <label for="verifyKeyExpire">Verify Key Expire:</label>
-                <input type="text" class="form-control" id="verifyKeyExpire" name="verifyKeyExpire" value="<%= user.verifyKeyExpire %>" readonly>
+                <label for="verify_key_expire">Verify Key Expire:</label>
+                <input type="text" class="form-control" id="verify_key_expire" name="verify_key_expire" value="<%= user.verify_key_expire %>" readonly>
             </div>
             <div class="form-group">
                 <label>Enabled:</label>
