--- a/views/rooms/booths/selectInterpreter.ejs
+++ b/views/rooms/booths/selectInterpreter.ejs
@@ -214,7 +214,7 @@
 
 <!-- Botón para ir atrás -->
 <div class="text-center">
-    <a href="javascript:history.go(-1)" class="btn btn-outline-dark">Back</a>
+    <a href="/rooms/<%= room.id %>" class="btn btn-outline-dark">Back</a>
 </div>
 
 <br>
