--- a/views/users/edit.ejs
+++ b/views/users/edit.ejs
@@ -103,7 +103,7 @@
             </div>
             <div class="form-group">
                 <label for="extra">Extra:</label>
-                <input type="text" class="form-control" id="extra" name="extra" value="<%= user.extra %>" required>
+                <input type="text" class="form-control" id="extra" name="extra" value="<%= user.extra %>">
             </div>
             <div class="form-group">
                 <label>Admin:</label>
